2002-09-29  AIDA Shinra <aida-s@jcom.home.ne.jp>

	* Re: [w3m-dev 03320] Re: Passwords
	* etc.c (dir_under): same path is ok
	* file.c (loadGeneralFile): if missing, return NULL
		ssl cert already checked
	* html.h (URLFILE): add ssl_certificate
	* istream.c (ssl_get_certificate): change args
	* istream.h (ssl_get_certificate): ditto
	* url.c (openSSLHandle): add p_cert
		ssl certificate check here
		(HTTPrequest): auth_cookie fix

2002-09-25  Fumitoshi UKAI  <ukai@debian.or.jp>

	* [w3m-dev 03321] Bug#162104: file descriptors 1 and 2 are closed rather than reopened to /dev/null
	* etc.c (mySystem): fd 0,1,2 redirect /dev/null, close all other fds

2002-09-25  AIDA Shinra <aida-s@jcom.home.ne.jp>

	* [w3m-dev 03319] mailto
	* main.c (followA): mailto
	* main.c (cmd_loadURL): mailto
	* url.c (_parsedURL2Str): mailto: query

2002-09-25  AIDA Shinra <aida-s@jcom.home.ne.jp>

	* [w3m-dev 03318] Re: Passwords
	* etc.c (struct auth_path): added
		(passwords): added
		(dir_under): added
		(add_auth_pass_entry): added
		(find_auth_pass_entry): added
		(find_auth_user_passwd): added
		(loadPasswd): added
		(find_auth): dir_under()
		(add_auth_cookie): check file
	* file.c (find_auth_user_passwd): removed
		(getAuthCookie): use delText()
				check proxy
		(get_auth_cookie): removed
		(loadGeneralFile): auth_pu
	* proto.h (schemeToProxy): added
		(get_auth_cookie): removed
		(loadPasswd): added
		(find_auth_user_passwd): added
	* rc.c (sync_with_option): loadPasswd()
	* textlist.c (delValue): added
	* textlist.h (delValue): added
		(delText): added
	* url.c (HTTPrequest): seen_www_auth
		(schemeToProxy): added

2002-09-11  Fumitoshi UKAI  <ukai@debian.or.jp>

	* [w3m-dev 03312] Re: Passwords
	* config.h.dist: PASSWD_FILE
	* file.c (find_auth_user_passwd): return if passwd_file == NULL

2002-09-11  Yuuichi Teranishi <teranisi@gohome.org>

	* [w3m-dev 03311] Re: Passwords
	* configure (config.h): default PASSWD_FILE
	* fm.h (passwd_file): default PASSWD_FILE
